--- a/src/public/css/sui/sui.css
+++ b/src/public/css/sui/sui.css
@@ -91,7 +91,12 @@
 
   /* -- Positioning Start -- */
 
+  --alpha-base-map-z-index: 10;
+  --hud-z-index: 50;
+  --menu-z-index: 10;
+  --menu-page-z-index: 1000;
   --popup-z-index: 100;
+  --raid-map-z-index: 11;
 
   /* -- Positioning End */
 
